--- a/messenger/pubspec.yaml
+++ b/messenger/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
     sdk: flutter
   curved_navigation_bar: ^0.3.7
   provider: ^4.0.4
+  path_provider: ^1.6.24
+  http: ^0.12.0
 
 
   # The following adds the Cupertino Icons font to your application.
