--- a/messenger/pubspec.yaml
+++ b/messenger/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   provider: ^4.0.4
   path_provider: ^1.6.24
   http: ^0.12.0
+  sqflite: any
 
 
   # The following adds the Cupertino Icons font to your application.
