--- a/messenger/pubspec.yaml
+++ b/messenger/pubspec.yaml
@@ -25,9 +25,14 @@ dependencies:
     sdk: flutter
   curved_navigation_bar: ^0.3.7
   provider: ^4.0.4
-  path_provider: ^1.6.24
-  http: ^0.12.0
+  path_provider: ^2.0.1
+  http: ^0.13.0
   sqflite: any
+  video_player: ^2.0.0
+  audioplayers: ^0.18.3
+  chewie: ^1.0.0
+  cached_network_image: ^3.0.0
+  
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -37,6 +42,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
